# runplz

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.py  deploy.sh  develop.sh  format.sh  lint.sh  pyproject.toml  release_utils.py  test.sh
.github/workflows/: release-build.yml  release.yml  tests.yml
examples/: simple_job.py
runplz/: __init__.py  _bootstrap.py  _cli.py  _excludes.py  _logcapture.py  _runs.py  _selector.py  app.py  config.py  image.py
runplz/backends/: _ssh_common.py  brev.py  local.py  modal.py  ssh.py
tasks/: todo.md
tests/: conftest.py  test_app_extras.py  test_bootstrap.py  test_brev_backend.py  test_cli.py  test_conftest_guard.py  test_default_entrypoint.py  test_local_backend.py  test_logcapture.py  test_modal_backend.py  test_preconditions.py  test_provider_blocklist.py  test_ps.py  test_runplz.py  test_runs_cli.py  test_scripts.py  test_selector.py  test_ssh_backend.py
