[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runplz"
version = "1.0.0"
description = "Tiny Modal-shaped job harness — one declaration, multiple backends (local Docker / Brev / Modal)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
# runplz core depends only on the stdlib. Backends use subprocess to shell out
# to `docker`, `ssh`, `rsync`, `brev` (CLI tools). Modal is an optional extra.
dependencies = []

[project.optional-dependencies]
modal = ["modal>=1.1,<2"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
runplz = "runplz._cli:main"

[project.urls]
Homepage = "https://github.com/pirl-unc/runplz"
Repository = "https://github.com/pirl-unc/runplz"

[tool.setuptools.packages.find]
include = ["runplz*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
